<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="header_main">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="header_settings">Настройки</string>
    <string name="theme_dark">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support_write">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_app_message">Учись Android-разработке в Яндекс Практикуме: https://practicum.yandex.ru/profile/android-developer/?from=learn_subscriptions-with-prof-recommendations</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_email">alexandrapuchihina@yandex.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="header_search">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="track_time_prefix">• %1$s</string>
    <string name="placeholder_nothing_found_title">Ничего не нашлось</string>
    <string name="placeholder_no_connection_title">Проблемы со связью</string>
    <string name="placeholder_no_connection_message">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="button_refresh">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_clear">Очистить историю</string>
    <string name="player_progress_default">0:00</string>
    <string name="player_duration">Длительность</string>
    <string name="player_album">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>
</resources>