<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_root"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:baselineAligned="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back1"
            android:layout_gravity="center_vertical"
            app:tint="?attr/colorOnSurface"
            android:contentDescription="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_settings"
            android:textColor="?attr/colorOnSurface"
            android:textSize="22sp"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/themeSwitchRow"
        style="@style/SettingsItemStyle">

        <TextView
            style="@style/SettingsItemTextStyle"
            android:text="@string/theme_dark" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnShare"
        style="@style/SettingsItemStyle">

        <TextView
            style="@style/SettingsItemTextStyle"
            android:text="@string/share_app" />

        <ImageView
            style="@style/SettingsItemIconStyle"
            android:src="@drawable/ic_share1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnSupport"
        style="@style/SettingsItemStyle">

        <TextView
            style="@style/SettingsItemTextStyle"
            android:text="@string/support_write" />

        <ImageView
            style="@style/SettingsItemIconStyle"
            android:src="@drawable/ic_support1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnAgreement"
        style="@style/SettingsItemStyle">

        <TextView
            style="@style/SettingsItemTextStyle"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/SettingsItemIconStyle"
            android:src="@drawable/ic_agreement1" />
    </LinearLayout>

</LinearLayout>